--- a/sample.html
+++ b/sample.html
@@ -560,8 +560,22 @@
                                         </div>
 
                                         <div class="form-group form-inline">
-                                            <label for="serialCmd">Command</label>
+                                            <label for="serialCmd">Data</label>
                                             <input type="text" id="serialCmd" class="form-control pull-right" />
+                                        </div>
+
+                                        <div class="form-group form-inline">
+                                            <label>Data Type</label>
+                                            <div class="pull-right">
+                                                <label>
+                                                    <input type="radio" name="serialType" id="serialPlainRadio" value="PLAIN"/>
+                                                    Plain
+                                                </label>
+                                                <label>
+                                                    <input type="radio" name="serialType" id="serialFileRadio" value="FILE"/>
+                                                    File
+                                                </label>
+                                            </div>
                                         </div>
 
                                         <div class="form-group form-inline">
@@ -1663,7 +1677,18 @@
     }
 
     function sendSerialData() {
-        qz.serial.sendData($("#serialPort").val(), $("#serialCmd").val()).catch(displayError);
+        var properties = {
+            baudRate: $("#serialBaud").val(),
+            dataBits: $("#serialData").val(),
+            stopBits: $("#serialStop").val(),
+            parity: $("#serialParity").val(),
+            flowControl: $("#serialFlow").val()
+        };
+        var serialData = {
+            type: $("input[name='serialType']:checked").val(),
+            data: $("#serialCmd").val()
+        };
+        qz.serial.sendData($("#serialPort").val(), serialData), properties.catch(displayError);
     }
 
     function closeSerialPort() {
@@ -2105,6 +2130,7 @@
     function resetSerialOptions() {
         $("#serialPort").val('');
         $("#serialCmd").val('');
+        $("#serialPlainRadio").prop('checked', 'true');
         $("#serialStart").val("0x0002"); //String.fromCharCode(2)
         $("#serialEnd").val("0x000D"); //String.fromCharCode(13)
 
