--- a/sample.html
+++ b/sample.html
@@ -111,6 +111,7 @@
                 <li id="serialTab" role="presentation"><a href="#serialContent" role="tab" data-toggle="tab">Serial</a></li>
                 <li id="usbTab" role="presentation"><a href="#usbContent" role="tab" data-toggle="tab">USB</a></li>
                 <li id="hidTab" role="presentation"><a href="#hidContent" role="tab" data-toggle="tab">HID</a></li>
+                <li id="statusTab" role="presentation"><a href="#statusContent" role="tab" data-toggle="tab">Printer Status</a></li>
                 <li id="fileTab" role="presentation"><a href="#fileContent" role="tab" data-toggle="tab">Files</a></li>
             </ul>
         </div>
@@ -858,6 +859,54 @@
                 </div>
             </div>
 
+            <div id="statusContent" class="tab-pane col-md-8">
+                <h3>Printer Status</h3>
+                <hr />
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            <div class="btn-toolbar">
+                                <div class="btn-group">
+                                    <button type="button" class="btn btn-info" onclick="startPrintersListen()">All Printers</button>
+                                    <button type="button" class="btn btn-success" onclick="startPrintersListen($('#configPrinter').html())">
+                                        Current Printer
+                                    </button>
+                                    <button type="button" class="btn btn-default" onclick="getPrintersStatus()">Request current status</button>
+                                </div>
+                                <div class="btn-group">
+                                    <button type="button" class="btn btn-warning" onclick="stopPrintersListen()">Stop Listening</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row" style="margin-top: 1em;">
+                    <div class="col-md-12">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h4 class="panel-title">Event Log</h4>
+                            </div>
+
+                            <div class="panel-body">
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div id="printersLog"></div>
+                                    </div>
+                                </div>
+                                <hr />
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <button type="button" class="btn btn-danger pull-right" onclick="clearPrintersLog();">Clear</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <div id="fileContent" class="tab-pane col-md-8">
                 <h3>Files</h3>
                 <hr />
@@ -983,46 +1032,45 @@
             </div>
         </div>
     </div>
-</div>
 
 
-<div class="modal fade" id="askFileModal" role="dialog">
-    <div class="modal-dialog modal-sm" role="document">
-        <div class="modal-content">
-            <div class="modal-body">
-                <div class="form-group">
-                    <label for="askFile">File:</label>
-                    <input type="text" id="askFile" class="form-control" value="C:\tmp\example-file.txt" />
+    <div class="modal fade" id="askFileModal" role="dialog">
+        <div class="modal-dialog modal-sm" role="document">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <div class="form-group">
+                        <label for="askFile">File:</label>
+                        <input type="text" id="askFile" class="form-control" value="C:\tmp\example-file.txt" />
+                    </div>
                 </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-primary" onclick="setPrintFile();">Set</button>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary" onclick="setPrintFile();">Set</button>
+                </div>
             </div>
         </div>
     </div>
-</div>
 
-<div class="modal fade" id="askHostModal" role="dialog">
-    <div class="modal-dialog modal-sm" role="document">
-        <div class="modal-content">
-            <div class="modal-body">
-                <div class="form-group">
-                    <label for="askHost">Host:</label>
-                    <input type="text" id="askHost" class="form-control" value="192.168.1.254" />
+    <div class="modal fade" id="askHostModal" role="dialog">
+        <div class="modal-dialog modal-sm" role="document">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <div class="form-group">
+                        <label for="askHost">Host:</label>
+                        <input type="text" id="askHost" class="form-control" value="192.168.1.254" />
+                    </div>
+                    <div class="form-group">
+                        <label for="askPort">Port:</label>
+                        <input type="text" id="askPort" class="form-control" value="9100" />
+                    </div>
                 </div>
-                <div class="form-group">
-                    <label for="askPort">Port:</label>
-                    <input type="text" id="askPort" class="form-control" value="9100" />
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary" onclick="setPrintHost();">Set</button>
                 </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-primary" onclick="setPrintHost();">Set</button>
             </div>
         </div>
     </div>
-</div>
 
 </div>
 </body>
@@ -1953,6 +2001,33 @@
     }
 
 
+    /// Status ///
+    function startPrintersListen(printerName) {
+        if (printerName === "NONE") {
+            return displayMessage("Please search for a valid printer first", "alert-warning");
+        }
+        qz.printers.stopListening().then(function() {
+            clearPrintersLog();
+            return qz.printers.startListening(printerName);
+        }).then(function() {
+            displayMessage("Started listening for " + (printerName ? printerName : "all") + " printer events");
+        }).catch(displayError);
+    }
+
+    function getPrintersStatus() {
+        qz.printers.getStatus().then(function() {
+            displayMessage("Requesting all printer statuses for listened printers");
+        }).catch(displayError);
+    }
+
+    function stopPrintersListen() {
+        qz.printers.stopListening().then(function() {
+            displayMessage("Stopped listening for printer events");
+            clearPrintersLog();
+        }).catch(displayError);
+    }
+
+
     /// File ///
     function listFiles() {
         var params = {
@@ -2171,6 +2246,10 @@
         $("#hidStream").val(100);
     }
 
+    function clearPrintersLog() {
+        $("#printersLog").html("");
+    }
+
     function resetFileOptions() {
         $("#fileLocation").val('');
         $("#fileData").val('');
@@ -2295,6 +2374,10 @@
         }
     });
 
+    qz.printers.setPrinterCallbacks(function(streamEvent) {
+        addPrintersLog(streamEvent.message, streamEvent.severity);
+    });
+
     qz.file.setFileCallbacks(function(streamEvent) {
         if (streamEvent.type !== 'ERROR') {
             var text = "<h5>File IO Event</h5>" +
@@ -2364,6 +2447,15 @@
         alert.html("<button type='button' class='close' data-dismiss='alert'>&times;</button>" + msg);
 
         $("#qz-alert").append(alert);
+    }
+
+    function addPrintersLog(msg, color) {
+        if (color == undefined) { color = ""; }
+
+        msg = '<div class="' + color + '">' + new Date().toString() + ": " + msg + "</div>";
+
+        var $log = $("#printersLog");
+        $log.html($log.html() + msg);
     }
 
     function pinMessage(msg, id, css) {
@@ -2550,7 +2642,6 @@
                             duplex: isChecked($("#pxlDuplex"), cleanConditions['pxlDuplex']),
                             interpolation: $("#pxlInterpolation").val(),
                             jobName: jobName,
-                            legacy: $("#pxlLegacy").prop('checked'),
                             margins: pxlMargins,
                             orientation: $("#pxlOrientation").val(),
                             paperThickness: $("#pxlPaperThickness").val(),
