--- a/sample.html
+++ b/sample.html
@@ -1950,7 +1950,8 @@
 
                             colorType: $("#pxlColorType").val(),
                             copies: copies,
-                            duplex: $("#pxlDuplex").prop('checked'),
+                            density: $("#pxlDensity").val(),
+		            duplex: $("#pxlDuplex").prop('checked'),
                             interpolation: $("#pxlInterpolation").val(),
                             jobName: jobName,
                             legacy: $("#pxlLegacy").prop('checked'),
