Fix density parsing logic Closes #481

--- a/sample.html
+++ b/sample.html
@@ -1156,7 +1156,7 @@
     /// Authentication setup ///
     qz.security.setCertificatePromise(function(resolve, reject) {
         //Preferred method - from server
-//        $.ajax({ url: "assets/signing/digital-certificate.txt", cache: false, dataType: "text" }).then(resolve, reject);
+//        $.ajax({ url: "assets/signing/digital-certificate.txt", driverFile: false, dataType: "text" }).then(resolve, reject);
 
         //Alternate method 1 - anonymous
 //        resolve();
